--- a/src/WebApplication4/Views/Account/Login.cshtml
+++ b/src/WebApplication4/Views/Account/Login.cshtml
@@ -10,48 +10,64 @@
 
 <h2>@ViewData["Title"].</h2>
 
-<div>
-    <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
-        <h4>Please enter your username and password.</h4>
-        <hr />
-        <div asp-validation-summary="ValidationSummary.All" class="text-danger"></div>
-        <div class="form-group">
-            <label asp-for="Email" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Password" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <button type="submit" class="btn btn-default">Log in</button>
-            </div>
-        </div>
-    </form>
+<div style="clear:both">
+    <h4>Please enter your username and password.</h4>
+    <hr />
+    <div style="float:left; width: 50%">
+        
+        <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
 
-    <div class="col-md-offset-2 col-md-10">
-        <a class="btn btn-default" href="#">
-           Facebook
-        </a>
-        <a class="btn btn-default" href="#">
-            Twitter
-        </a>
-        <a class="btn btn-default" href="#">
-            Google Plus
-        </a>
+            <div asp-validation-summary="ValidationSummary.All" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Email" class="col-md-2 control-label"></label>
+                <div class="col-md-10">
+                    <input asp-for="Email" class="form-control" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <label asp-for="Password" class="col-md-2 control-label"></label>
+                <div class="col-md-10">
+                    <input asp-for="Password" class="form-control" />
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <button type="submit" class="btn btn-default">Log in</button>
+                </div>
+            </div>
+        </form>
     </div>
 
- </div>
+    <div style="float:right; width: 50%; ">
+        
+        <div class="col-md-offset-2 col-md-10">
+            <h4>Or login with a social network</h4>
+            <a class="btn btn-default" href="#">
+                Facebook
+            </a>
+            <a class="btn btn-default" href="#">
+                Twitter
+            </a>
+            <a class="btn btn-default" href="#">
+                Google Plus
+            </a>
+        </div>
+    </div>
 
-        <!--<hr />
-        {
+
+</div>
+
+    <div style="clear:left">
+        @section Scripts {
+            @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+        } 
+
+
+    </div>
+    
+        <!--{
             var loginProviders = SignInManager.GetExternalAuthenticationSchemes().ToList();
             if (loginProviders.Count == 0)
             {
@@ -77,6 +93,4 @@
             }
         }-->
 
-        @section Scripts {
-            @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
-        }
+
