--- a/src/WebApplication4/Views/Shared/_Layout.cshtml
+++ b/src/WebApplication4/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>@ViewData["Title"] - WebApplication4</title>
+        <title>@ViewData["Title"]Weight Loss Helper - Cloud Computing</title>
 
         <environment names="Development">
             <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -28,7 +28,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a asp-controller="Home" asp-action="Index" class="navbar-brand">WebApplication4</a>
+                    <a asp-controller="Home" asp-action="Index" class="navbar-brand">Weight Loss Helper</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
@@ -47,7 +47,7 @@
             @RenderBody()
             <hr />
             <footer>
-                <p>&copy; 2016 - WebApplication4</p>
+                <p>&copy; 2016 - Weight Loss Helper</p>
             </footer>
         </div>
 
