--- a/src/WebApplication4/Views/Account/Login.cshtml
+++ b/src/WebApplication4/Views/Account/Login.cshtml
@@ -47,7 +47,7 @@
             </div>
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <button type="submit" class="btn btn-default">Log in</button>
+                    <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-log-in"></span> Login</a></button>
                 </div>
             </div>
         </form>
