--- a/src/WebApplication4/Views/Account/Register.cshtml
+++ b/src/WebApplication4/Views/Account/Register.cshtml
@@ -72,7 +72,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <button type="submit" class="btn btn-default">Register</button>
+                <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-ok"></span> Register</button>
             </div>
         </div>
 </form>
