--- a/src/WebApplication4/Views/Manage/Index.cshtml
+++ b/src/WebApplication4/Views/Manage/Index.cshtml
@@ -13,13 +13,11 @@
         <dt>Age</dt>
         <dt>Height</dt>
         <dt>Weight</dt>
+        <dt>IMC</dt>
         <dt>Sex</dt>
-        <dt>Email</dt>
-        
+        <dt>Email</dt>@Model.Email
         <div class="personal_container">
-
         </div>
-
 </div>
 <div>
     <h4>Change your account settings</h4>
@@ -36,50 +34,16 @@
                 <text>[&nbsp;&nbsp;<a asp-controller="Manage" asp-action="SetPassword">Create</a>&nbsp;&nbsp;]</text>
             }
         </dd>
-        <dt>External Logins:</dt>
-        <dd>
-            @Model.Logins.Count [&nbsp;&nbsp;<a asp-controller="Manage" asp-action="ManageLogins">Manage</a>&nbsp;&nbsp;]
-        </dd>
-        <dt>Phone Number:</dt>
-        <dd>
-            <p>
-                Phone Numbers can used as a second factor of verification in two-factor authentication.
-                See <a href="http://go.microsoft.com/fwlink/?LinkID=532713">this article</a>
-                for details on setting up this ASP.NET application to support two-factor authentication using SMS.
-            </p>
-            @*@(Model.PhoneNumber ?? "None")
-                @if (Model.PhoneNumber != null)
-                {
-                    <br />
-                    <text>[&nbsp;&nbsp;<a asp-controller="Manage" asp-action="AddPhoneNumber">Change</a>&nbsp;&nbsp;]</text>
-                    <form asp-controller="Manage" asp-action="RemovePhoneNumber" method="post" role="form">
-                        [<button type="submit" class="btn-link">Remove</button>]
-                    </form>
-                }
-                else
-                {
-                    <text>[&nbsp;&nbsp;<a asp-controller="Manage" asp-action="AddPhoneNumber">Add</a>&nbsp;&nbsp;]</text>
-                }*@
-        </dd>
-
-        <dt>Two-Factor Authentication:</dt>
-        <dd>
-            <p>
-                There are no two-factor authentication providers configured. See <a href="http://go.microsoft.com/fwlink/?LinkID=532713">this article</a>
-                for setting up this application to support two-factor authentication.
-            </p>
-            @*@if (Model.TwoFactor)
-                {
-                    <form asp-controller="Manage" asp-action="DisableTwoFactorAuthentication" method="post" class="form-horizontal" role="form">
-                        Enabled [<button type="submit" class="btn-link">Disable</button>]
-                    </form>
-                }
-                else
-                {
-                    <form asp-controller="Manage" asp-action="EnableTwoFactorAuthentication" method="post" class="form-horizontal" role="form">
-                        [<button type="submit" class="btn-link">Enable</button>] Disabled
-                    </form>
-                }*@
-        </dd>
     </dl>
+ </div>
+ 
+<div>
+        <h4>Change your personal info</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>Physical Information:</dt>
+            <dd>
+                <text>[&nbsp;&nbsp;<a asp-controller="Manage" asp-action="ChangeInfo">Change</a>&nbsp;&nbsp;]</text>
+            </dd>
+        </dl>
 </div>
