--- a/src/WebApplication4/Views/Home/Index.cshtml
+++ b/src/WebApplication4/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
         <h1>User Profile Metrics</h1>
         <!-- Insertar datos de la tabla de FoodController-->
                 
-
+        <!-- Insertar datos de la tabla de FoodController-->
         <h4 id="content">
             This Application  would help the users to lose weight by keeping a diary of their weight, ingested calories,
             physical exercise, etc. The results achieved through a period of time.
