--- a/src/WebApplication4/Views/FoodCalculators/Create.cshtml
+++ b/src/WebApplication4/Views/FoodCalculators/Create.cshtml
@@ -1,4 +1,4 @@
-@model WebApplication4.Models.FoodCalculator
+@model WebApplication4.ViewModels.FoodsCalculator
 
 @{
     ViewData["Title"] = "Create";
@@ -13,41 +13,52 @@
         <hr />
         <div asp-validation-summary="ValidationSummary.ModelOnly" class="text-danger"></div>
         <div class="form-group">
-            <label asp-for="FoodName" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
+            <label asp-for="calculator.FoodName" class="col-md-2 control-label"></label>
+            <!--<div class="col-md-10">
                 <input asp-for="FoodName" class="form-control" />
                 <span asp-validation-for="FoodName" class="text-danger" />
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="FoodQuantity" class="col-md-2 control-label"></label>
+            </div>-->
             <div class="col-md-10">
-                <input asp-for="FoodQuantity" class="form-control" />
-                <span asp-validation-for="FoodQuantity" class="text-danger" />
+                <select style="color:#000000" name="foods" class="form-control">
+                    @foreach (var food in Model.allFood)
+                    {
+                        <option style="color:#000000">@food.Name</option>
+                    }
+
+                </select>
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="Calories" class="col-md-2 control-label"></label>
+            <label asp-for="calculator.FoodQuantity" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="Calories" class="form-control" />
-                <span asp-validation-for="Calories" class="text-danger" />
+                <input asp-for="calculator.FoodQuantity" class="form-control" />
+                <span asp-validation-for="calculator.FoodQuantity" class="text-danger" />
             </div>
         </div>
+        <!--
         <div class="form-group">
-            <label asp-for="Grams" class="col-md-2 control-label"></label>
+            <label asp-for="calculator.Calories" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="Grams" class="form-control" />
-                <span asp-validation-for="Grams" class="text-danger" />
+                <input asp-for="calculator.Calories" class="form-control" />
+                <span asp-validation-for="calculator.Calories" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="Lipid" class="col-md-2 control-label"></label>
+            <label asp-for="calculator.Grams" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="Lipid" class="form-control" />
-                <span asp-validation-for="Lipid" class="text-danger" />
+                <input asp-for="calculator.Grams" class="form-control" />
+                <span asp-validation-for="calculator.Grams" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
+            <label asp-for="calculator.Lipid" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="calculator.Lipid" class="form-control" />
+                <span asp-validation-for="calculator.Lipid" class="text-danger" />
+            </div>
+        </div>
+            -->
+        <div class="form-group"> 
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
