--- a/src/WebApplication4/Views/FoodCalculators/Create.cshtml
+++ b/src/WebApplication4/Views/FoodCalculators/Create.cshtml
@@ -13,40 +13,45 @@
         <hr />
         <div asp-validation-summary="ValidationSummary.ModelOnly" class="text-danger"></div>
       
-        <div class="form-group">
-            <label asp-for="calculator.Meal" class="col-md-2 control-label"></label>
-            <div style="color:black" class="col-md-10">
-                <select id="mealList" name="Meal" onchange="SetSelectedText(this)">
-                    <option value="1">Breakfast</option>
-                    <option value="2">Lunch</option>
-                    <option value="3">Dinner</option>
-                </select>
-                <input type="hidden" id="hfMealName" name="MealName" />
+        <div id="FoodsbyUser">
+            <div class="form-group">
+                <label asp-for="calculator.Meal" class="col-md-2 control-label"></label>
+                <div style="color:black" class="col-md-10">
+                    <select id="mealList" name="Meal" onchange="SetSelectedText(this)">
+                        <option value="1">Breakfast</option>
+                        <option value="2">Lunch</option>
+                        <option value="3">Dinner</option>
+                    </select>
+                    <input type="hidden" id="hfMealName" name="MealName" />
+                </div>
             </div>
-        </div>
 
-        <!--<div class="col-md-10">
+            <!--<div class="col-md-10">
             <input asp-for="FoodName" class="form-control" />
             <span asp-validation-for="FoodName" class="text-danger" />
         </div>-->
-        <div class="form-group">
-                <label asp-for="calculator.FoodName" class="col-md-2 control-label"></label>
-                <div style="color:black" class="col-md-10">
-                    @Html.DropDownListFor(m => Model.foodId, Model.selectList)
-                </div>
-        </div>
-        
-        <div class="form-group">
-            <label asp-for="calculator.FoodQuantity" class="col-md-2 control-label"></label>
-            <div class="col-md-10"> 
-                <input asp-for="calculator.FoodQuantity" class="form-control" /><span>Grams</span>
-                <span asp-validation-for="calculator.FoodQuantity" class="text-danger" />
+            <div class="form-group">                
+                    <label asp-for="calculator.FoodName" class="col-md-2 control-label"></label>                                
+                    
+                     <div style="color:black" class="col-md-10">
+                        
+                          @Html.DropDownListFor(m => Model.foodId, Model.selectList)
+                     </div>
+                       
             </div>
-        </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span> Add More</button>
+            <div class="form-group">
+                <label asp-for="calculator.FoodQuantity" class="col-md-2 control-label"></label>
+                <div class="col-md-10">
+                    <input asp-for="calculator.FoodQuantity" class="form-control" /><span>Grams</span>
+                    <span asp-validation-for="calculator.FoodQuantity" class="text-danger" />
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-plus"></span> Add More</button>
+                </div>
             </div>
         </div>
         <!--
@@ -89,11 +94,16 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+    <link href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" rel="Stylesheet"></link>
+    <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
 
     <script type="text/javascript">
         function SetSelectedText(mealList) {
         var selectedText = mealList.options[mealList.selectedIndex].innerHTML;
         document.getElementById("hfMealName").value = selectedText;
         }
+
+       
+        
     </script>
 }
