--- a/src/WebApplication4/Views/FoodCalculators/Create.cshtml
+++ b/src/WebApplication4/Views/FoodCalculators/Create.cshtml
@@ -53,7 +53,7 @@
 
             <div class="form-group">
               <div class="col-md-offset-2 col-md-10">
-                  <a class="btn btn-success"><span class="glyphicon glyphicon-plus"></span> Add</a>
+                  <a class="btn btn-success" id="addFood"><span class="glyphicon glyphicon-plus"></span> Add</a>
               </div>
             </div> 
             
@@ -91,7 +91,7 @@
 
         <div class="top-right table-responsive col-md-8">
             <h3>Food Calculator</h3>
-            <table class="table" style="background-color:#F8F8F8">
+            <table id="tbFood" class="table" style="background-color:#F8F8F8">
                 <thead style="color:black">
                     <tr>
                         <th>Food</th>
